# passing

./: .gitignore  README.md  build_binary.sh  kill.sh  path_viz.py  pyproject.toml  run_player.py  start.sh  start1.sh  start2.sh  start3v3.sh  start_custom_players.sh  start_passing.sh  start_passing_ball_on_obstacle.sh
2d_viz/: server.py
2d_viz/static/: index.html  viz.js
mujococodebase/: agent.py  decision_maker.py  path_viz_emitter.py  robot.py  server.py  world_parser.py
mujococodebase/planning/: path_follower.py  path_viz_emitter.py  planning.py
mujococodebase/skills/: skill.py  skills_manager.py
mujococodebase/skills/keyframe/: keyframe.py
mujococodebase/skills/keyframe/get_up/: get_up.py  get_up_back.yaml  get_up_front.yaml
mujococodebase/skills/keyframe/poses/neutral/: neutral.py  neutral.yaml
mujococodebase/skills/walk/: export.py  locomotion_nn.pth  locomotion_nn_meta.json  new_nn_walk.onnx  new_nn_walk.onnx.data  new_nn_walk.onnx.meta.json  nn_walk.onnx  nn_walk.onnx.data  torch_policy.py  walk.onnx  walk.py
mujococodebase/utils/: math_ops.py  neural_network.py  planning.py
mujococodebase/world/: field.py  field_landmarks.py  grid_world.py  other_robot.py  planning.py  play_mode.py  world.py
planning_sim/: algorithms.py  ana_theta_star_animation.py  astar.py  simulation.py  test_astar.py  world.py
tests/: run_all_tests.py  test1.py  utils.py
tests/logs/: transfer_to_drive.sh
verification/: README.md  collect.py  conftest.py  evaluators.py  schema.py  test1.py  test5A.py  test5B.py  test5C.py  test6A.py  test6B.py  test6C.py
